# LogSymmetricDemons

./: CMakeLists.txt  CTestConfig.cmake  FindMatlab.cmake  README.md  README.txt  SDCMakeMacros.cmake
Applications/: .LogDomainDemonsRegistration.cxx.swp  CMakeLists.txt  ConvertMhaToNifti.cxx  DemonsRegistration.cxx  ImageCompare.cxx  InverseDeformationField.cxx  InverseDisplacementField.cxx  LogDomainDemonsRegistration.cxx  MeanSVF.cxx  MeanSVFLE.cxx  TransportStationaryVelocityField.cxx  TransportStationaryVelocityField3D.cxx
Code/: itkBCHConjugateActionFilter.h  itkBCHConjugateActionFilter.hxx  itkBCHSchildsLadderParallelTransportOfDisplacementField.h  itkBCHSchildsLadderParallelTransportOfVelocityField.h  itkBCHSchildsLadderParallelTransportOfVelocityField.hxx  itkDisplacementFieldCompositionFilter.h  itkDisplacementFieldCompositionFilter.hxx  itkDisplacementToVelocityFieldLogFilter.h  itkExponentialDeformationFieldImageFilter2.h  itkExponentialDeformationFieldImageFilter2.hxx  itkExponentialDeformationFieldImageFilter2.txx  itkExponentialDisplacementFieldImageFilter_LSD.h  itkExponentialDisplacementFieldImageFilter_LSD.hxx  itkLogDomainDeformableRegistrationFilter.h  itkLogDomainDeformableRegistrationFilter.hxx  itkLogDomainDemonsRegistrationFilter.h  itkLogDomainDemonsRegistrationFilter.hxx  itkMultiResolutionLogDomainDeformableRegistration.h  itkMultiResolutionLogDomainDeformableRegistration.hxx  itkMultiResolutionLogDomainDeformableRegistration.txx  itkNCCRegistrationFunction2.h  itkNCCRegistrationFunction2.hxx  itkOppositeImageFilter.h  itkSymmetricLogDomainDemonsRegistrationFilter.h  itkSymmetricLogDomainDemonsRegistrationFilter.hxx  itkTransformToVelocityFieldSource.h  itkTransformToVelocityFieldSource.hxx  itkVelocityFieldBCHCompositionFilter.h  itkVelocityFieldBCHCompositionFilter.hxx  itkVelocityFieldBCHCompositionFilter.txx  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.h  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.hxx  itkVelocityFieldLieBracketFilter.h  itkVelocityFieldLieBracketFilter.txx  vnl_sd_matrix_tools.h
SuperBuild/: CMakeLists.txt  External_ITKv4.cmake  LogSymmetricDemons.nightly.sh  nightly.sh
Testing/: CMakeLists.txt  ConvertSVFToDefAndWarp.cxx  ConvertSVFToDefAndWarp3D.cxx  DistanceMaps.cxx  DistanceMaps2D.cxx  MakeTestImages.cxx  MakeTestImages3D.cxx  MakeTestImages3D_2.cxx  itkDisplacementFieldCompositionFilterTest.cxx  itkDisplacementToVelocityFieldLogFilterTest.cxx  itkExponentialDeformationFieldImageFilterTest2.cxx  itkExponentialDisplacementFieldImageFilterTest.cxx  itkExponentialDisplacementFieldImageFilter_LSDTest.cxx  itkLogDomainDeformableRegistrationFilterTest.cxx  itkLogDomainDemonsRegistrationFilterTest.cxx  itkLogDomainDemonsRegistrationFilterTest2.cxx  itkOppositeImageFilterTest.cxx  itkSymmetricLogDomainDemonsRegistrationFilterTest.cxx  itkSymmetricLogDomainDemonsRegistrationFilterTest2.cxx  itkTransformToVelocityFieldSourceTest.cxx  itkVelocityFieldBCHCompositionFilterTest.cxx  itkVelocityFieldLieBracketFilterTest.cxx  vnl_sd_matrix_tools_test.cxx
